--- a/10.1_INPUT_Capture_Encoder/10.1_INPUT_Capture_Encoder.ioc
+++ b/10.1_INPUT_Capture_Encoder/10.1_INPUT_Capture_Encoder.ioc
@@ -5,21 +5,25 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM3
-Mcu.IPNb=4
+Mcu.IP3=TIM5
+Mcu.IP4=TIM8
+Mcu.IPNb=5
 Mcu.Name=STM32F429I(E-G)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
+Mcu.Pin10=PI5
+Mcu.Pin11=PI6
+Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin3=PH1/OSC_OUT
-Mcu.Pin4=PB1
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=PB3
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM3_VS_ClockSourceINT
-Mcu.PinsNb=10
+Mcu.Pin4=PH10
+Mcu.Pin5=PH11
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=PB3
+Mcu.Pin9=PI4
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
@@ -35,17 +39,12 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM8_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PB1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PB1.GPIO_Label=LED0
-PB1.GPIO_PuPd=GPIO_PULLDOWN
-PB1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB1.Locked=true
-PB1.Signal=S_TIM3_CH4
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
@@ -64,6 +63,27 @@ PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
+PH10.GPIOParameters=GPIO_PuPd
+PH10.GPIO_PuPd=GPIO_PULLUP
+PH10.Locked=true
+PH10.Signal=S_TIM5_CH1
+PH11.GPIOParameters=GPIO_PuPd
+PH11.GPIO_PuPd=GPIO_PULLUP
+PH11.Locked=true
+PH11.Signal=S_TIM5_CH2
+PI4.GPIOParameters=GPIO_Speed,GPIO_Label
+PI4.GPIO_Label=DIR
+PI4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PI4.Locked=true
+PI4.Signal=GPIO_Output
+PI5.Locked=true
+PI5.Signal=S_TIM8_CH1
+PI6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PI6.GPIO_Label=EN
+PI6.GPIO_PuPd=GPIO_PULLUP
+PI6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
+PI6.Locked=true
+PI6.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
@@ -85,13 +105,13 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=09_PWM_OUTPUT.ioc
-ProjectManager.ProjectName=09_PWM_OUTPUT
+ProjectManager.ProjectFileName=10.1_INPUT_Capture_Encoder.ioc
+ProjectManager.ProjectName=10.1_INPUT_Capture_Encoder
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM5_Init-TIM5-false-HAL-true,4-MX_TIM8_Init-TIM8-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -131,18 +151,20 @@ RCC.VCOSAIOutputFreq_ValueQ=20416666.666666668
 RCC.VCOSAIOutputFreq_ValueR=40833333.333333336
 RCC.VcooutputI2S=160000000
 RCC.VcooutputI2SQ=160000000
-SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
-SH.S_TIM3_CH4.ConfNb=1
-TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-PWM Generation4 CH4,Pulse-PWM Generation4 CH4,OCPolarity_4,OCFastMode_PWM-PWM Generation4 CH4
-TIM3.OCFastMode_PWM-PWM\ Generation4\ CH4=TIM_OCFAST_DISABLE
-TIM3.OCPolarity_4=TIM_OCPOLARITY_LOW
-TIM3.Period=4096-1
-TIM3.Prescaler=90-1
-TIM3.Pulse-PWM\ Generation4\ CH4=0
+SH.S_TIM5_CH1.0=TIM5_CH1,Encoder_Interface
+SH.S_TIM5_CH1.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,Encoder_Interface
+SH.S_TIM5_CH2.ConfNb=1
+SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
+SH.S_TIM8_CH1.ConfNb=1
+TIM5.IPParameters=Period
+TIM5.Period=0xffffffff-1
+TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM8.IPParameters=Prescaler,Channel-PWM Generation1 CH1,Period,AutoReloadPreload
+TIM8.Period=2000 - 1
+TIM8.Prescaler=90-1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
+isbadioc=false
