--- a/31_OV5640/31_OV5640.ioc
+++ b/31_OV5640/31_OV5640.ioc
@@ -162,12 +162,18 @@ PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Locked=true
 PA6.Mode=Slave_8_bits_External_Synchro
 PA6.Signal=DCMI_PIXCLK
-PB3.GPIOParameters=GPIO_Label
+PB3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB3.GPIO_Label=DCMI_SDA
+PB3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB3.GPIO_PuPd=GPIO_PULLUP
+PB3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB3.Locked=true
 PB3.Signal=GPIO_Output
-PB4.GPIOParameters=GPIO_Label
+PB4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB4.GPIO_Label=DCMI_SCL
+PB4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB4.GPIO_PuPd=GPIO_PULLUP
+PB4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
@@ -556,7 +562,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
