--- a/31_OV5640/31_OV5640.ioc
+++ b/31_OV5640/31_OV5640.ioc
@@ -41,11 +41,12 @@ Mcu.Family=STM32F4
 Mcu.IP0=DCMI
 Mcu.IP1=DMA2D
 Mcu.IP2=FMC
-Mcu.IP3=LTDC
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP3=I2C2
+Mcu.IP4=LTDC
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IPNb=8
 Mcu.Name=STM32F429I(E-G)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PC14/OSC32_IN
@@ -56,81 +57,83 @@ Mcu.Pin12=PH1/OSC_OUT
 Mcu.Pin13=PC0
 Mcu.Pin14=PC2
 Mcu.Pin15=PC3
-Mcu.Pin16=PA6
-Mcu.Pin17=PF11
-Mcu.Pin18=PF12
-Mcu.Pin19=PF13
+Mcu.Pin16=PH4
+Mcu.Pin17=PH5
+Mcu.Pin18=PA6
+Mcu.Pin19=PF11
 Mcu.Pin2=PI9
-Mcu.Pin20=PF14
-Mcu.Pin21=PF15
-Mcu.Pin22=PG0
-Mcu.Pin23=PG1
-Mcu.Pin24=PE7
-Mcu.Pin25=PE8
-Mcu.Pin26=PE9
-Mcu.Pin27=PE10
-Mcu.Pin28=PE11
-Mcu.Pin29=PE12
+Mcu.Pin20=PF12
+Mcu.Pin21=PF13
+Mcu.Pin22=PF14
+Mcu.Pin23=PF15
+Mcu.Pin24=PG0
+Mcu.Pin25=PG1
+Mcu.Pin26=PE7
+Mcu.Pin27=PE8
+Mcu.Pin28=PE9
+Mcu.Pin29=PE10
 Mcu.Pin3=PI10
-Mcu.Pin30=PE13
-Mcu.Pin31=PE14
-Mcu.Pin32=PE15
-Mcu.Pin33=PH8
-Mcu.Pin34=PH9
-Mcu.Pin35=PH10
-Mcu.Pin36=PH11
-Mcu.Pin37=PH12
-Mcu.Pin38=PD8
-Mcu.Pin39=PD9
+Mcu.Pin30=PE11
+Mcu.Pin31=PE12
+Mcu.Pin32=PE13
+Mcu.Pin33=PE14
+Mcu.Pin34=PE15
+Mcu.Pin35=PH8
+Mcu.Pin36=PH9
+Mcu.Pin37=PH10
+Mcu.Pin38=PH11
+Mcu.Pin39=PH12
 Mcu.Pin4=PF0
-Mcu.Pin40=PD10
-Mcu.Pin41=PD14
-Mcu.Pin42=PD15
-Mcu.Pin43=PG2
-Mcu.Pin44=PG4
-Mcu.Pin45=PG5
-Mcu.Pin46=PG6
-Mcu.Pin47=PG7
-Mcu.Pin48=PG8
-Mcu.Pin49=PC6
+Mcu.Pin40=PD8
+Mcu.Pin41=PD9
+Mcu.Pin42=PD10
+Mcu.Pin43=PD14
+Mcu.Pin44=PD15
+Mcu.Pin45=PG2
+Mcu.Pin46=PG4
+Mcu.Pin47=PG5
+Mcu.Pin48=PG6
+Mcu.Pin49=PG7
 Mcu.Pin5=PF1
-Mcu.Pin50=PC7
-Mcu.Pin51=PC8
-Mcu.Pin52=PC9
-Mcu.Pin53=PA13
-Mcu.Pin54=PH13
-Mcu.Pin55=PH14
-Mcu.Pin56=PH15
-Mcu.Pin57=PI0
-Mcu.Pin58=PI1
-Mcu.Pin59=PI2
+Mcu.Pin50=PG8
+Mcu.Pin51=PC6
+Mcu.Pin52=PC7
+Mcu.Pin53=PC8
+Mcu.Pin54=PC9
+Mcu.Pin55=PA13
+Mcu.Pin56=PH13
+Mcu.Pin57=PH14
+Mcu.Pin58=PH15
+Mcu.Pin59=PI0
 Mcu.Pin6=PF2
-Mcu.Pin60=PA14
-Mcu.Pin61=PA15
-Mcu.Pin62=PC11
-Mcu.Pin63=PD0
-Mcu.Pin64=PD1
-Mcu.Pin65=PD3
-Mcu.Pin66=PG11
-Mcu.Pin67=PG15
-Mcu.Pin68=PB3
-Mcu.Pin69=PB4
+Mcu.Pin60=PI1
+Mcu.Pin61=PI2
+Mcu.Pin62=PA14
+Mcu.Pin63=PA15
+Mcu.Pin64=PC11
+Mcu.Pin65=PD0
+Mcu.Pin66=PD1
+Mcu.Pin67=PD3
+Mcu.Pin68=PG11
+Mcu.Pin69=PG15
 Mcu.Pin7=PF3
-Mcu.Pin70=PB5
-Mcu.Pin71=PB7
-Mcu.Pin72=PB8
-Mcu.Pin73=PB9
-Mcu.Pin74=PE0
-Mcu.Pin75=PE1
-Mcu.Pin76=PI4
-Mcu.Pin77=PI5
-Mcu.Pin78=PI6
-Mcu.Pin79=PI7
+Mcu.Pin70=PB3
+Mcu.Pin71=PB4
+Mcu.Pin72=PB5
+Mcu.Pin73=PB7
+Mcu.Pin74=PB8
+Mcu.Pin75=PB9
+Mcu.Pin76=PE0
+Mcu.Pin77=PE1
+Mcu.Pin78=PI4
+Mcu.Pin79=PI5
 Mcu.Pin8=PF4
-Mcu.Pin80=VP_DMA2D_VS_DMA2D
-Mcu.Pin81=VP_SYS_VS_Systick
+Mcu.Pin80=PI6
+Mcu.Pin81=PI7
+Mcu.Pin82=VP_DMA2D_VS_DMA2D
+Mcu.Pin83=VP_SYS_VS_Systick
 Mcu.Pin9=PF5
-Mcu.PinsNb=82
+Mcu.PinsNb=84
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
@@ -480,6 +483,12 @@ PH15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PH15.Locked=true
 PH15.Mode=RGB565
 PH15.Signal=LTDC_G4
+PH4.Locked=true
+PH4.Mode=I2C
+PH4.Signal=I2C2_SCL
+PH5.Locked=true
+PH5.Mode=I2C
+PH5.Signal=I2C2_SDA
 PH8.GPIOParameters=GPIO_Speed
 PH8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PH8.Locked=true
