--- a/31_OV5640/31_OV5640.ioc
+++ b/31_OV5640/31_OV5640.ioc
@@ -1,7 +1,24 @@
 #MicroXplorer Configuration settings - do not modify
+DCMI.IPParameters=PCKPolarity
+DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
 DMA2D.ColorMode=DMA2D_OUTPUT_RGB565
 DMA2D.IPParameters=Mode,ColorMode
 DMA2D.Mode=DMA2D_R2M
+Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_HALFFULL
+Dma.DCMI.0.Instance=DMA2_Stream1
+Dma.DCMI.0.MemBurst=DMA_MBURST_SINGLE
+Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
+Dma.DCMI.0.Mode=DMA_CIRCULAR
+Dma.DCMI.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DCMI.0.Priority=DMA_PRIORITY_HIGH
+Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request0=DCMI
+Dma.RequestsNb=1
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
 FMC.ColumnBitsNumber1=FMC_SDRAM_COLUMN_BITS_NUM_9
 FMC.ExitSelfRefreshDelay1=8
@@ -39,14 +56,15 @@ LTDC.VFP=12
 LTDC.VSync=3
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
-Mcu.IP1=DMA2D
-Mcu.IP2=FMC
-Mcu.IP3=I2C2
-Mcu.IP4=LTDC
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IPNb=8
+Mcu.IP1=DMA
+Mcu.IP2=DMA2D
+Mcu.IP3=FMC
+Mcu.IP4=I2C2
+Mcu.IP5=LTDC
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IPNb=9
 Mcu.Name=STM32F429I(E-G)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PC14/OSC32_IN
@@ -140,7 +158,8 @@ Mcu.UserName=STM32F429IGTx
 MxCube.Version=5.6.0
 MxDb.Version=DB.5.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DMA2D_IRQn=true\:1\:1\:true\:false\:true\:true\:true
+NVIC.DCMI_IRQn=true\:1\:2\:true\:false\:true\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -571,7 +590,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true,7-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
