--- a/31_OV5640/31_OV5640.ioc
+++ b/31_OV5640/31_OV5640.ioc
@@ -38,6 +38,7 @@ FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
 FMC.SelfRefreshTime1=6
 FMC.WriteRecoveryTime1=4
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LTDC.ActiveH=600
 LTDC.ActiveW=1024
@@ -69,89 +70,90 @@ Mcu.Name=STM32F429I(E-G)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
-Mcu.Pin10=PF10
-Mcu.Pin11=PH0/OSC_IN
-Mcu.Pin12=PH1/OSC_OUT
-Mcu.Pin13=PC0
-Mcu.Pin14=PC2
-Mcu.Pin15=PC3
-Mcu.Pin16=PH4
-Mcu.Pin17=PH5
-Mcu.Pin18=PA6
-Mcu.Pin19=PF11
+Mcu.Pin10=PF6
+Mcu.Pin11=PF10
+Mcu.Pin12=PH0/OSC_IN
+Mcu.Pin13=PH1/OSC_OUT
+Mcu.Pin14=PC0
+Mcu.Pin15=PC2
+Mcu.Pin16=PC3
+Mcu.Pin17=PH4
+Mcu.Pin18=PH5
+Mcu.Pin19=PA6
 Mcu.Pin2=PI9
-Mcu.Pin20=PF12
-Mcu.Pin21=PF13
-Mcu.Pin22=PF14
-Mcu.Pin23=PF15
-Mcu.Pin24=PG0
-Mcu.Pin25=PG1
-Mcu.Pin26=PE7
-Mcu.Pin27=PE8
-Mcu.Pin28=PE9
-Mcu.Pin29=PE10
+Mcu.Pin20=PF11
+Mcu.Pin21=PF12
+Mcu.Pin22=PF13
+Mcu.Pin23=PF14
+Mcu.Pin24=PF15
+Mcu.Pin25=PG0
+Mcu.Pin26=PG1
+Mcu.Pin27=PE7
+Mcu.Pin28=PE8
+Mcu.Pin29=PE9
 Mcu.Pin3=PI10
-Mcu.Pin30=PE11
-Mcu.Pin31=PE12
-Mcu.Pin32=PE13
-Mcu.Pin33=PE14
-Mcu.Pin34=PE15
-Mcu.Pin35=PH8
-Mcu.Pin36=PH9
-Mcu.Pin37=PH10
-Mcu.Pin38=PH11
-Mcu.Pin39=PH12
+Mcu.Pin30=PE10
+Mcu.Pin31=PE11
+Mcu.Pin32=PE12
+Mcu.Pin33=PE13
+Mcu.Pin34=PE14
+Mcu.Pin35=PE15
+Mcu.Pin36=PH8
+Mcu.Pin37=PH9
+Mcu.Pin38=PH10
+Mcu.Pin39=PH11
 Mcu.Pin4=PF0
-Mcu.Pin40=PD8
-Mcu.Pin41=PD9
-Mcu.Pin42=PD10
-Mcu.Pin43=PD14
-Mcu.Pin44=PD15
-Mcu.Pin45=PG2
-Mcu.Pin46=PG4
-Mcu.Pin47=PG5
-Mcu.Pin48=PG6
-Mcu.Pin49=PG7
+Mcu.Pin40=PH12
+Mcu.Pin41=PD8
+Mcu.Pin42=PD9
+Mcu.Pin43=PD10
+Mcu.Pin44=PD14
+Mcu.Pin45=PD15
+Mcu.Pin46=PG2
+Mcu.Pin47=PG4
+Mcu.Pin48=PG5
+Mcu.Pin49=PG6
 Mcu.Pin5=PF1
-Mcu.Pin50=PG8
-Mcu.Pin51=PC6
-Mcu.Pin52=PC7
-Mcu.Pin53=PC8
-Mcu.Pin54=PC9
-Mcu.Pin55=PA13
-Mcu.Pin56=PH13
-Mcu.Pin57=PH14
-Mcu.Pin58=PH15
-Mcu.Pin59=PI0
+Mcu.Pin50=PG7
+Mcu.Pin51=PG8
+Mcu.Pin52=PC6
+Mcu.Pin53=PC7
+Mcu.Pin54=PC8
+Mcu.Pin55=PC9
+Mcu.Pin56=PA13
+Mcu.Pin57=PH13
+Mcu.Pin58=PH14
+Mcu.Pin59=PH15
 Mcu.Pin6=PF2
-Mcu.Pin60=PI1
-Mcu.Pin61=PI2
-Mcu.Pin62=PA14
-Mcu.Pin63=PA15
-Mcu.Pin64=PC11
-Mcu.Pin65=PD0
-Mcu.Pin66=PD1
-Mcu.Pin67=PD3
-Mcu.Pin68=PG11
-Mcu.Pin69=PG15
+Mcu.Pin60=PI0
+Mcu.Pin61=PI1
+Mcu.Pin62=PI2
+Mcu.Pin63=PA14
+Mcu.Pin64=PA15
+Mcu.Pin65=PC11
+Mcu.Pin66=PD0
+Mcu.Pin67=PD1
+Mcu.Pin68=PD3
+Mcu.Pin69=PG11
 Mcu.Pin7=PF3
-Mcu.Pin70=PB3
-Mcu.Pin71=PB4
-Mcu.Pin72=PB5
-Mcu.Pin73=PB7
-Mcu.Pin74=PB8
-Mcu.Pin75=PB9
-Mcu.Pin76=PE0
-Mcu.Pin77=PE1
-Mcu.Pin78=PI4
-Mcu.Pin79=PI5
+Mcu.Pin70=PG15
+Mcu.Pin71=PB3
+Mcu.Pin72=PB4
+Mcu.Pin73=PB5
+Mcu.Pin74=PB7
+Mcu.Pin75=PB8
+Mcu.Pin76=PB9
+Mcu.Pin77=PE0
+Mcu.Pin78=PE1
+Mcu.Pin79=PI4
 Mcu.Pin8=PF4
-Mcu.Pin80=PI6
-Mcu.Pin81=PI7
-Mcu.Pin82=VP_DMA2D_VS_DMA2D
-Mcu.Pin83=VP_SYS_VS_Systick
+Mcu.Pin80=PI5
+Mcu.Pin81=PI6
+Mcu.Pin82=PI7
+Mcu.Pin83=VP_DMA2D_VS_DMA2D
+Mcu.Pin84=VP_SYS_VS_Systick
 Mcu.Pin9=PF5
-Mcu.PinsNb=84
+Mcu.PinsNb=85
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
@@ -418,6 +420,10 @@ PF5.GPIO_Mode=GPIO_MODE_AF_PP
 PF5.GPIO_PuPd=GPIO_PULLUP
 PF5.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PF5.Signal=FMC_A5
+PF6.GPIOParameters=GPIO_Speed
+PF6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PF6.Locked=true
+PF6.Signal=GPIO_Output
 PG0.GPIOParameters=GPIO_PuPd,GPIO_Speed_High_Default,GPIO_Mode
 PG0.GPIO_Mode=GPIO_MODE_AF_PP
 PG0.GPIO_PuPd=GPIO_PULLUP
@@ -590,7 +596,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DCMI_Init-DCMI-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true,7-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_DCMI_Init-DCMI-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_LTDC_Init-LTDC-false-HAL-true,7-MX_DMA2D_Init-DMA2D-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
