--- a/31_OV5640/31_OV5640.ioc
+++ b/31_OV5640/31_OV5640.ioc
@@ -1,9 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
 DCMI.IPParameters=PCKPolarity
 DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
+DMA2D.AlphaModeForeground=DMA2D_REPLACE_ALPHA
 DMA2D.ColorMode=DMA2D_OUTPUT_RGB565
-DMA2D.IPParameters=Mode,ColorMode
-DMA2D.Mode=DMA2D_R2M
+DMA2D.IPParameters=Mode,ColorMode,AlphaModeForeground,InputAlphaForeground
+DMA2D.InputAlphaForeground=0x7f
+DMA2D.Mode=DMA2D_M2M
 Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_HALFFULL
@@ -47,7 +49,7 @@ LTDC.FBStartAdress_L0=0xC0000000
 LTDC.HBP=140
 LTDC.HFP=160
 LTDC.HSync=20
-LTDC.IPParameters=Layers,PixelFormat_L0,Alpha_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,HSync,HBP,ActiveW,HFP,VSync,VBP,ActiveH,VFP
+LTDC.IPParameters=Layers,PixelFormat_L0,Alpha_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,HSync,HBP,ActiveW,HFP,VSync,VBP,ActiveH,VFP,WindowX1_L0,WindowY1_L0
 LTDC.ImageHeight_L0=600
 LTDC.ImageWidth_L0=1024
 LTDC.Layers=0
@@ -55,6 +57,8 @@ LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_RGB565
 LTDC.VBP=20
 LTDC.VFP=12
 LTDC.VSync=3
+LTDC.WindowX1_L0=1023
+LTDC.WindowY1_L0=599
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
 Mcu.IP1=DMA
