--- a/13_LTDC/13_LTDC.ioc
+++ b/13_LTDC/13_LTDC.ioc
@@ -26,21 +26,27 @@ LTDC.ActiveH=600
 LTDC.ActiveW=1024
 LTDC.Alpha_L0=255
 LTDC.FBStartAdress_L0=0xc0000000
-LTDC.FBStartAdress_L1=0xc1000000
+LTDC.FBStartAdress_L1=0xc4000000
 LTDC.HBP=140
 LTDC.HFP=160
 LTDC.HSync=20
-LTDC.IPParameters=ActiveW,ActiveH,PixelFormat_L0,PixelFormat_L1,HSync,HBP,HFP,VSync,VBP,VFP,Alpha_L0,ImageWidth_L0,ImageHeight_L0,ImageWidth_L1,ImageHeight_L1,FBStartAdress_L0,FBStartAdress_L1,Layers
-LTDC.ImageHeight_L0=600
-LTDC.ImageHeight_L1=600
-LTDC.ImageWidth_L0=1024
-LTDC.ImageWidth_L1=1024
-LTDC.Layers=0
+LTDC.IPParameters=ActiveW,ActiveH,PixelFormat_L0,PixelFormat_L1,HSync,HBP,HFP,VSync,VBP,VFP,Alpha_L0,ImageWidth_L0,ImageHeight_L0,ImageWidth_L1,ImageHeight_L1,FBStartAdress_L0,FBStartAdress_L1,Layers,WindowX1_L0,WindowY1_L0,WindowX1_L1,WindowY1_L1,WindowY0_L1,WindowX0_L1
+LTDC.ImageHeight_L0=240
+LTDC.ImageHeight_L1=240
+LTDC.ImageWidth_L0=320
+LTDC.ImageWidth_L1=320
+LTDC.Layers=1
 LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_RGB565
 LTDC.PixelFormat_L1=LTDC_PIXEL_FORMAT_RGB565
 LTDC.VBP=20
 LTDC.VFP=12
 LTDC.VSync=3
+LTDC.WindowX0_L1=703
+LTDC.WindowX1_L0=320
+LTDC.WindowX1_L1=1023
+LTDC.WindowY0_L1=359
+LTDC.WindowY1_L0=240
+LTDC.WindowY1_L1=599
 Mcu.Family=STM32F4
 Mcu.IP0=DMA2D
 Mcu.IP1=FMC
@@ -382,7 +388,7 @@ PI9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI9.Mode=RGB565
 PI9.Signal=LTDC_VSYNC
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -529,4 +535,3 @@ VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
-isbadioc=false
