--- a/31_OV5640/31_OV5640.ioc
+++ b/31_OV5640/31_OV5640.ioc
@@ -7,18 +7,15 @@ DMA2D.IPParameters=Mode,ColorMode,AlphaModeForeground,InputAlphaForeground
 DMA2D.InputAlphaForeground=0x7f
 DMA2D.Mode=DMA2D_M2M
 Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_HALFFULL
+Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.DCMI.0.Instance=DMA2_Stream1
-Dma.DCMI.0.MemBurst=DMA_MBURST_SINGLE
 Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
 Dma.DCMI.0.Mode=DMA_CIRCULAR
-Dma.DCMI.0.PeriphBurst=DMA_PBURST_SINGLE
 Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
 Dma.DCMI.0.Priority=DMA_PRIORITY_HIGH
-Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=DCMI
 Dma.RequestsNb=1
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
