double buffer working

--- a/31_OV5640/31_OV5640.ioc
+++ b/31_OV5640/31_OV5640.ioc
@@ -1,21 +1,24 @@
 #MicroXplorer Configuration settings - do not modify
 DCMI.IPParameters=PCKPolarity
 DCMI.PCKPolarity=DCMI_PCKPOLARITY_RISING
-DMA2D.AlphaModeForeground=DMA2D_REPLACE_ALPHA
+DMA2D.AlphaModeForeground=DMA2D_NO_MODIF_ALPHA
 DMA2D.ColorMode=DMA2D_OUTPUT_RGB565
 DMA2D.IPParameters=Mode,ColorMode,AlphaModeForeground,InputAlphaForeground
-DMA2D.InputAlphaForeground=0x7f
+DMA2D.InputAlphaForeground=0
 DMA2D.Mode=DMA2D_M2M
 Dma.DCMI.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.DCMI.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.DCMI.0.FIFOThreshold=DMA_FIFO_THRESHOLD_HALFFULL
 Dma.DCMI.0.Instance=DMA2_Stream1
-Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.DCMI.0.MemBurst=DMA_MBURST_SINGLE
+Dma.DCMI.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.DCMI.0.MemInc=DMA_MINC_ENABLE
 Dma.DCMI.0.Mode=DMA_CIRCULAR
+Dma.DCMI.0.PeriphBurst=DMA_PBURST_SINGLE
 Dma.DCMI.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.DCMI.0.PeriphInc=DMA_PINC_DISABLE
 Dma.DCMI.0.Priority=DMA_PRIORITY_HIGH
-Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.DCMI.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.Request0=DCMI
 Dma.RequestsNb=1
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
@@ -47,15 +50,15 @@ LTDC.HBP=140
 LTDC.HFP=160
 LTDC.HSync=20
 LTDC.IPParameters=Layers,PixelFormat_L0,Alpha_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,HSync,HBP,ActiveW,HFP,VSync,VBP,ActiveH,VFP,WindowX1_L0,WindowY1_L0
-LTDC.ImageHeight_L0=600
-LTDC.ImageWidth_L0=1024
+LTDC.ImageHeight_L0=120
+LTDC.ImageWidth_L0=160
 LTDC.Layers=0
 LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_RGB565
 LTDC.VBP=20
 LTDC.VFP=12
 LTDC.VSync=3
-LTDC.WindowX1_L0=1023
-LTDC.WindowY1_L0=599
+LTDC.WindowX1_L0=159
+LTDC.WindowY1_L0=119
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
 Mcu.IP1=DMA
@@ -161,8 +164,8 @@ Mcu.UserName=STM32F429IGTx
 MxCube.Version=5.6.0
 MxDb.Version=DB.5.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DCMI_IRQn=true\:0\:0\:true\:false\:true\:true\:true
-NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DCMI_IRQn=true\:0\:0\:true\:true\:true\:1\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:true\:true\:2\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
