--- a/31_OV5640/31_OV5640.ioc
+++ b/31_OV5640/31_OV5640.ioc
@@ -164,8 +164,8 @@ Mcu.UserName=STM32F429IGTx
 MxCube.Version=5.6.0
 MxDb.Version=DB.5.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DCMI_IRQn=true\:0\:0\:true\:true\:true\:1\:true\:true
-NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:true\:true\:2\:false\:true
+NVIC.DCMI_IRQn=true\:2\:3\:true\:false\:true\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:true\:true\:1\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -185,7 +185,8 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=DCMI_RESET
 PA15.Locked=true
 PA15.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_Speed
+PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Locked=true
 PA6.Mode=Slave_8_bits_External_Synchro
@@ -208,17 +209,20 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=LTDC_BL
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Speed
+PB7.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB7.Locked=true
 PB7.Mode=Slave_8_bits_External_Synchro
 PB7.Signal=DCMI_VSYNC
-PB8.GPIOParameters=GPIO_Speed
+PB8.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB8.Locked=true
 PB8.Mode=Slave_8_bits_External_Synchro
 PB8.Signal=DCMI_D6
-PB9.GPIOParameters=GPIO_Speed
+PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB9.GPIO_PuPd=GPIO_PULLUP
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB9.Locked=true
 PB9.Mode=Slave_8_bits_External_Synchro
@@ -228,7 +232,8 @@ PC0.GPIO_Mode=GPIO_MODE_AF_PP
 PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PC0.Signal=FMC_SDNWE
-PC11.GPIOParameters=GPIO_Speed
+PC11.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PC11.GPIO_PuPd=GPIO_PULLUP
 PC11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC11.Locked=true
 PC11.Mode=Slave_8_bits_External_Synchro
@@ -249,22 +254,26 @@ PC3.GPIO_PuPd=GPIO_PULLUP
 PC3.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PC3.Mode=SdramChipSelect1_1
 PC3.Signal=FMC_SDCKE0
-PC6.GPIOParameters=GPIO_Speed
+PC6.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PC6.GPIO_PuPd=GPIO_PULLUP
 PC6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC6.Locked=true
 PC6.Mode=Slave_8_bits_External_Synchro
 PC6.Signal=DCMI_D0
-PC7.GPIOParameters=GPIO_Speed
+PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PC7.GPIO_PuPd=GPIO_PULLUP
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC7.Locked=true
 PC7.Mode=Slave_8_bits_External_Synchro
 PC7.Signal=DCMI_D1
-PC8.GPIOParameters=GPIO_Speed
+PC8.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PC8.GPIO_PuPd=GPIO_PULLUP
 PC8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC8.Locked=true
 PC8.Mode=Slave_8_bits_External_Synchro
 PC8.Signal=DCMI_D2
-PC9.GPIOParameters=GPIO_Speed
+PC9.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PC9.GPIO_PuPd=GPIO_PULLUP
 PC9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC9.Locked=true
 PC9.Mode=Slave_8_bits_External_Synchro
@@ -294,7 +303,8 @@ PD15.GPIO_Mode=GPIO_MODE_AF_PP
 PD15.GPIO_PuPd=GPIO_PULLUP
 PD15.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PD15.Signal=FMC_D1_DA1
-PD3.GPIOParameters=GPIO_Speed
+PD3.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PD3.GPIO_PuPd=GPIO_PULLUP
 PD3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD3.Locked=true
 PD3.Mode=Slave_8_bits_External_Synchro
@@ -518,7 +528,8 @@ PH4.Signal=I2C2_SCL
 PH5.Locked=true
 PH5.Mode=I2C
 PH5.Signal=I2C2_SDA
-PH8.GPIOParameters=GPIO_Speed
+PH8.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PH8.GPIO_PuPd=GPIO_PULLUP
 PH8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PH8.Locked=true
 PH8.Mode=Slave_8_bits_External_Synchro
@@ -588,7 +599,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
