LCD has line, need check SDRAM speed

--- a/31_OV5640/31_OV5640.ioc
+++ b/31_OV5640/31_OV5640.ioc
@@ -85,79 +85,81 @@ Mcu.Pin17=PH4
 Mcu.Pin18=PH5
 Mcu.Pin19=PA6
 Mcu.Pin2=PI9
-Mcu.Pin20=PF11
-Mcu.Pin21=PF12
-Mcu.Pin22=PF13
-Mcu.Pin23=PF14
-Mcu.Pin24=PF15
-Mcu.Pin25=PG0
-Mcu.Pin26=PG1
-Mcu.Pin27=PE7
-Mcu.Pin28=PE8
-Mcu.Pin29=PE9
+Mcu.Pin20=PB0
+Mcu.Pin21=PB1
+Mcu.Pin22=PF11
+Mcu.Pin23=PF12
+Mcu.Pin24=PF13
+Mcu.Pin25=PF14
+Mcu.Pin26=PF15
+Mcu.Pin27=PG0
+Mcu.Pin28=PG1
+Mcu.Pin29=PE7
 Mcu.Pin3=PI10
-Mcu.Pin30=PE10
-Mcu.Pin31=PE11
-Mcu.Pin32=PE12
-Mcu.Pin33=PE13
-Mcu.Pin34=PE14
-Mcu.Pin35=PE15
-Mcu.Pin36=PH8
-Mcu.Pin37=PH9
-Mcu.Pin38=PH10
-Mcu.Pin39=PH11
+Mcu.Pin30=PE8
+Mcu.Pin31=PE9
+Mcu.Pin32=PE10
+Mcu.Pin33=PE11
+Mcu.Pin34=PE12
+Mcu.Pin35=PE13
+Mcu.Pin36=PE14
+Mcu.Pin37=PE15
+Mcu.Pin38=PH8
+Mcu.Pin39=PH9
 Mcu.Pin4=PF0
-Mcu.Pin40=PH12
-Mcu.Pin41=PD8
-Mcu.Pin42=PD9
-Mcu.Pin43=PD10
-Mcu.Pin44=PD14
-Mcu.Pin45=PD15
-Mcu.Pin46=PG2
-Mcu.Pin47=PG4
-Mcu.Pin48=PG5
-Mcu.Pin49=PG6
+Mcu.Pin40=PH10
+Mcu.Pin41=PH11
+Mcu.Pin42=PH12
+Mcu.Pin43=PD8
+Mcu.Pin44=PD9
+Mcu.Pin45=PD10
+Mcu.Pin46=PD14
+Mcu.Pin47=PD15
+Mcu.Pin48=PG2
+Mcu.Pin49=PG4
 Mcu.Pin5=PF1
-Mcu.Pin50=PG7
-Mcu.Pin51=PG8
-Mcu.Pin52=PC6
-Mcu.Pin53=PC7
-Mcu.Pin54=PC8
-Mcu.Pin55=PC9
-Mcu.Pin56=PA13
-Mcu.Pin57=PH13
-Mcu.Pin58=PH14
-Mcu.Pin59=PH15
+Mcu.Pin50=PG5
+Mcu.Pin51=PG6
+Mcu.Pin52=PG7
+Mcu.Pin53=PG8
+Mcu.Pin54=PC6
+Mcu.Pin55=PC7
+Mcu.Pin56=PC8
+Mcu.Pin57=PC9
+Mcu.Pin58=PA13
+Mcu.Pin59=PH13
 Mcu.Pin6=PF2
-Mcu.Pin60=PI0
-Mcu.Pin61=PI1
-Mcu.Pin62=PI2
-Mcu.Pin63=PA14
-Mcu.Pin64=PA15
-Mcu.Pin65=PC11
-Mcu.Pin66=PD0
-Mcu.Pin67=PD1
-Mcu.Pin68=PD3
-Mcu.Pin69=PG11
+Mcu.Pin60=PH14
+Mcu.Pin61=PH15
+Mcu.Pin62=PI0
+Mcu.Pin63=PI1
+Mcu.Pin64=PI2
+Mcu.Pin65=PA14
+Mcu.Pin66=PA15
+Mcu.Pin67=PC11
+Mcu.Pin68=PD0
+Mcu.Pin69=PD1
 Mcu.Pin7=PF3
-Mcu.Pin70=PG15
-Mcu.Pin71=PB3
-Mcu.Pin72=PB4
-Mcu.Pin73=PB5
-Mcu.Pin74=PB7
-Mcu.Pin75=PB8
-Mcu.Pin76=PB9
-Mcu.Pin77=PE0
-Mcu.Pin78=PE1
-Mcu.Pin79=PI4
+Mcu.Pin70=PD3
+Mcu.Pin71=PG11
+Mcu.Pin72=PG15
+Mcu.Pin73=PB3
+Mcu.Pin74=PB4
+Mcu.Pin75=PB5
+Mcu.Pin76=PB7
+Mcu.Pin77=PB8
+Mcu.Pin78=PB9
+Mcu.Pin79=PE0
 Mcu.Pin8=PF4
-Mcu.Pin80=PI5
-Mcu.Pin81=PI6
-Mcu.Pin82=PI7
-Mcu.Pin83=VP_DMA2D_VS_DMA2D
-Mcu.Pin84=VP_SYS_VS_Systick
+Mcu.Pin80=PE1
+Mcu.Pin81=PI4
+Mcu.Pin82=PI5
+Mcu.Pin83=PI6
+Mcu.Pin84=PI7
+Mcu.Pin85=VP_DMA2D_VS_DMA2D
+Mcu.Pin86=VP_SYS_VS_Systick
 Mcu.Pin9=PF5
-Mcu.PinsNb=85
+Mcu.PinsNb=87
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
@@ -191,6 +193,17 @@ PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Locked=true
 PA6.Mode=Slave_8_bits_External_Synchro
 PA6.Signal=DCMI_PIXCLK
+PB0.GPIOParameters=PinState,GPIO_Label
+PB0.GPIO_Label=LED1
+PB0.Locked=true
+PB0.PinState=GPIO_PIN_SET
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PB1.GPIO_Label=LED0
+PB1.GPIO_PuPd=GPIO_PULLUP
+PB1.Locked=true
+PB1.PinState=GPIO_PIN_SET
+PB1.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB3.GPIO_Label=DCMI_SDA
 PB3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -628,28 +641,29 @@ RCC.HCLKFreq_Value=180000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=160000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSAIN,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
-RCC.LCDTFTFreq_Value=25000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSAIN,PLLSAIR,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.LCDTFTFreq_Value=28000000
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=180000000
 RCC.PLLCLKFreq_Value=180000000
 RCC.PLLM=15
 RCC.PLLN=216
 RCC.PLLQCLKFreq_Value=90000000
-RCC.PLLSAIN=60
+RCC.PLLSAIN=168
+RCC.PLLSAIR=5
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
-RCC.SAI_AClocksFreq_Value=25000000
-RCC.SAI_BClocksFreq_Value=25000000
+RCC.SAI_AClocksFreq_Value=70000000
+RCC.SAI_BClocksFreq_Value=70000000
 RCC.SYSCLKFreq_VALUE=180000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=320000000
 RCC.VCOInputFreq_Value=1666666.6666666667
 RCC.VCOOutputFreq_Value=360000000
-RCC.VCOSAIOutputFreq_Value=100000000
-RCC.VCOSAIOutputFreq_ValueQ=25000000
-RCC.VCOSAIOutputFreq_ValueR=50000000
+RCC.VCOSAIOutputFreq_Value=280000000
+RCC.VCOSAIOutputFreq_ValueQ=70000000
+RCC.VCOSAIOutputFreq_ValueR=56000000
 RCC.VcooutputI2S=160000000
 RCC.VcooutputI2SQ=160000000
 SH.FMC_A0.0=FMC_A0,13b-sda1
