change optimization level ,working

--- a/12.1_FMC_SDRAM/12.1_FMC_SDRAM.ioc
+++ b/12.1_FMC_SDRAM/12.1_FMC_SDRAM.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
 FMC.ColumnBitsNumber1=FMC_SDRAM_COLUMN_BITS_NUM_9
-FMC.ExitSelfRefreshDelay1=8
+FMC.ExitSelfRefreshDelay1=7
 FMC.IPParameters=ColumnBitsNumber1,CASLatency1,SDClockPeriod1,ReadPipeDelay1,ReadBurst1,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,WriteRecoveryTime1,RPDelay1,RCDDelay1,WriteProtection1
 FMC.LoadToActiveDelay1=2
 FMC.RCDDelay1=2
@@ -10,9 +10,9 @@ FMC.ReadBurst1=FMC_SDRAM_RBURST_ENABLE
 FMC.ReadPipeDelay1=FMC_SDRAM_RPIPE_DELAY_1
 FMC.RowCycleDelay1=6
 FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
-FMC.SelfRefreshTime1=6
+FMC.SelfRefreshTime1=4
 FMC.WriteProtection1=FMC_SDRAM_WRITE_PROTECTION_DISABLE
-FMC.WriteRecoveryTime1=4
+FMC.WriteRecoveryTime1=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -29,54 +29,55 @@ Mcu.Pin1=PC15/OSC32_OUT
 Mcu.Pin10=PC0
 Mcu.Pin11=PC2
 Mcu.Pin12=PC3
-Mcu.Pin13=PF11
-Mcu.Pin14=PF12
-Mcu.Pin15=PF13
-Mcu.Pin16=PF14
-Mcu.Pin17=PF15
-Mcu.Pin18=PG0
-Mcu.Pin19=PG1
+Mcu.Pin13=PB1
+Mcu.Pin14=PF11
+Mcu.Pin15=PF12
+Mcu.Pin16=PF13
+Mcu.Pin17=PF14
+Mcu.Pin18=PF15
+Mcu.Pin19=PG0
 Mcu.Pin2=PF0
-Mcu.Pin20=PE7
-Mcu.Pin21=PE8
-Mcu.Pin22=PE9
-Mcu.Pin23=PE10
-Mcu.Pin24=PE11
-Mcu.Pin25=PE12
-Mcu.Pin26=PE13
-Mcu.Pin27=PE14
-Mcu.Pin28=PE15
-Mcu.Pin29=PD8
+Mcu.Pin20=PG1
+Mcu.Pin21=PE7
+Mcu.Pin22=PE8
+Mcu.Pin23=PE9
+Mcu.Pin24=PE10
+Mcu.Pin25=PE11
+Mcu.Pin26=PE12
+Mcu.Pin27=PE13
+Mcu.Pin28=PE14
+Mcu.Pin29=PE15
 Mcu.Pin3=PF1
-Mcu.Pin30=PD9
-Mcu.Pin31=PD10
-Mcu.Pin32=PD14
-Mcu.Pin33=PD15
-Mcu.Pin34=PG2
-Mcu.Pin35=PG4
-Mcu.Pin36=PG5
-Mcu.Pin37=PG8
-Mcu.Pin38=PA13
-Mcu.Pin39=PA14
+Mcu.Pin30=PD8
+Mcu.Pin31=PD9
+Mcu.Pin32=PD10
+Mcu.Pin33=PD14
+Mcu.Pin34=PD15
+Mcu.Pin35=PG2
+Mcu.Pin36=PG4
+Mcu.Pin37=PG5
+Mcu.Pin38=PG8
+Mcu.Pin39=PA13
 Mcu.Pin4=PF2
-Mcu.Pin40=PD0
-Mcu.Pin41=PD1
-Mcu.Pin42=PG15
-Mcu.Pin43=PB3
-Mcu.Pin44=PE0
-Mcu.Pin45=PE1
-Mcu.Pin46=VP_SYS_VS_Systick
+Mcu.Pin40=PA14
+Mcu.Pin41=PD0
+Mcu.Pin42=PD1
+Mcu.Pin43=PG15
+Mcu.Pin44=PB3
+Mcu.Pin45=PE0
+Mcu.Pin46=PE1
+Mcu.Pin47=VP_SYS_VS_Systick
 Mcu.Pin5=PF3
 Mcu.Pin6=PF4
 Mcu.Pin7=PF5
 Mcu.Pin8=PH0/OSC_IN
 Mcu.Pin9=PH1/OSC_OUT
-Mcu.PinsNb=47
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
-MxCube.Version=5.4.0
-MxDb.Version=DB.5.0.40
+MxCube.Version=5.6.0
+MxDb.Version=DB.5.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -92,6 +93,12 @@ PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
+PB1.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PB1.GPIO_Label=LED0
+PB1.GPIO_PuPd=GPIO_PULLUP
+PB1.Locked=true
+PB1.PinState=GPIO_PIN_SET
+PB1.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
 PC0.GPIOParameters=GPIO_PuPd
@@ -238,7 +245,7 @@ PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -247,7 +254,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F429IGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.24.2
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
