--- a/31_OV5640/31_OV5640.ioc
+++ b/31_OV5640/31_OV5640.ioc
@@ -23,7 +23,7 @@ Dma.Request0=DCMI
 Dma.RequestsNb=1
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
 FMC.ColumnBitsNumber1=FMC_SDRAM_COLUMN_BITS_NUM_9
-FMC.ExitSelfRefreshDelay1=8
+FMC.ExitSelfRefreshDelay1=7
 FMC.IPParameters=ColumnBitsNumber1,CASLatency1,SDClockPeriod1,SDClockPeriod2,ReadBurst1,ReadBurst2,ReadPipeDelay1,ReadPipeDelay2,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,RowCycleDelay2,WriteRecoveryTime1,RPDelay1,RPDelay2,RCDDelay1
 FMC.LoadToActiveDelay1=2
 FMC.RCDDelay1=2
@@ -37,28 +37,39 @@ FMC.RowCycleDelay1=6
 FMC.RowCycleDelay2=6
 FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
 FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
-FMC.SelfRefreshTime1=6
-FMC.WriteRecoveryTime1=4
+FMC.SelfRefreshTime1=4
+FMC.WriteRecoveryTime1=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LTDC.ActiveH=600
 LTDC.ActiveW=1024
+LTDC.Alpha0_L1=255
 LTDC.Alpha_L0=255
+LTDC.Alpha_L1=0
 LTDC.FBStartAdress_L0=0xC0000000
+LTDC.FBStartAdress_L1=0xC0400000
+LTDC.Green_L1=0
 LTDC.HBP=140
 LTDC.HFP=160
 LTDC.HSync=20
-LTDC.IPParameters=Layers,PixelFormat_L0,Alpha_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,HSync,HBP,ActiveW,HFP,VSync,VBP,ActiveH,VFP,WindowX1_L0,WindowY1_L0
+LTDC.IPParameters=Layers,PixelFormat_L0,Alpha_L0,FBStartAdress_L0,ImageWidth_L0,ImageHeight_L0,HSync,HBP,ActiveW,HFP,VSync,VBP,ActiveH,VFP,WindowX1_L0,WindowY1_L0,WindowX1_L1,WindowY1_L1,FBStartAdress_L1,WindowX0_L1,WindowY0_L1,ImageWidth_L1,ImageHeight_L1,Green_L1,Alpha_L1,PixelFormat_L1,Alpha0_L1
 LTDC.ImageHeight_L0=120
+LTDC.ImageHeight_L1=120
 LTDC.ImageWidth_L0=160
+LTDC.ImageWidth_L1=160
 LTDC.Layers=0
 LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_RGB565
+LTDC.PixelFormat_L1=LTDC_PIXEL_FORMAT_RGB565
 LTDC.VBP=20
 LTDC.VFP=12
 LTDC.VSync=3
+LTDC.WindowX0_L1=200
 LTDC.WindowX1_L0=159
+LTDC.WindowX1_L1=359
+LTDC.WindowY0_L1=200
 LTDC.WindowY1_L0=119
+LTDC.WindowY1_L1=319
 Mcu.Family=STM32F4
 Mcu.IP0=DCMI
 Mcu.IP1=DMA
@@ -166,7 +177,7 @@ Mcu.UserName=STM32F429IGTx
 MxCube.Version=5.6.0
 MxDb.Version=DB.5.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DCMI_IRQn=true\:2\:3\:true\:false\:true\:true\:true
+NVIC.DCMI_IRQn=true\:0\:1\:true\:false\:true\:true\:true
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:true\:true\:1\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
