update NAND, add uart output

--- a/33_NAND_FLASH_MT29F4G08/33_NAND_FLASH_MT29F4G08.ioc
+++ b/33_NAND_FLASH_MT29F4G08/33_NAND_FLASH_MT29F4G08.ioc
@@ -1,25 +1,55 @@
 #MicroXplorer Configuration settings - do not modify
+FMC.AttributeSpaceHiZSetupTime2=3
+FMC.AttributeSpaceHoldSetupTime2=2
+FMC.AttributeSpaceSetupTime2=1
+FMC.AttributeSpaceWaitSetupTime2=3
+FMC.CommonSpaceHiZSetupTime2=3
+FMC.CommonSpaceHoldSetupTime2=2
+FMC.CommonSpaceSetupTime2=1
+FMC.CommonSpaceWaitSetupTime2=3
+FMC.ECCPageSize2=FMC_NAND_ECC_PAGE_SIZE_2048BYTE
+FMC.IPParameters=ECCPageSize2,CommonSpaceSetupTime2,CommonSpaceWaitSetupTime2,CommonSpaceHoldSetupTime2,CommonSpaceHiZSetupTime2,AttributeSpaceSetupTime2,AttributeSpaceWaitSetupTime2,AttributeSpaceHoldSetupTime2,AttributeSpaceHiZSetupTime2,NandPageSize2,NandSpareAreaSize2,NandBlockSize2,NandBlockNbr2,NandPlaneNbr2,NandPlaneSize2
+FMC.NandBlockNbr2=2048
+FMC.NandBlockSize2=64
+FMC.NandPageSize2=2048
+FMC.NandPlaneNbr2=2
+FMC.NandPlaneSize2=4096
+FMC.NandSpareAreaSize2=64
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART1
-Mcu.IPNb=4
+Mcu.IP0=FMC
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F429I(E-G)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
+Mcu.Pin10=PD14
+Mcu.Pin11=PD15
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PD0
+Mcu.Pin17=PD1
+Mcu.Pin18=PD4
+Mcu.Pin19=PD5
 Mcu.Pin2=PH0/OSC_IN
+Mcu.Pin20=PG9
+Mcu.Pin21=PB3
+Mcu.Pin22=VP_SYS_VS_Systick
 Mcu.Pin3=PH1/OSC_OUT
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=PB3
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin4=PE7
+Mcu.Pin5=PE8
+Mcu.Pin6=PE9
+Mcu.Pin7=PE10
+Mcu.Pin8=PD11
+Mcu.Pin9=PD12
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
@@ -52,12 +82,26 @@ PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PD0.Signal=FMC_D2_DA2
+PD1.Signal=FMC_D3_DA3
+PD11.Signal=FMC_A16_CLE
+PD12.Signal=FMC_A17_ALE
+PD14.Signal=FMC_D0_DA0
+PD15.Signal=FMC_D1_DA1
+PD4.Signal=FMC_NOE
+PD5.Signal=FMC_NWE
+PE10.Signal=FMC_D7_DA7
+PE7.Signal=FMC_D4_DA4
+PE8.Signal=FMC_D5_DA5
+PE9.Signal=FMC_D6_DA6
+PG9.Mode=NandChipSelect3_2
+PG9.Signal=FMC_NCE3
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -77,8 +121,8 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=00_Template.ioc
-ProjectManager.ProjectName=00_Template
+ProjectManager.ProjectFileName=33_NAND_FLASH_MT29F4G08.ioc
+ProjectManager.ProjectName=33_NAND_FLASH_MT29F4G08
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
@@ -123,6 +167,30 @@ RCC.VCOSAIOutputFreq_ValueQ=20416666.666666668
 RCC.VCOSAIOutputFreq_ValueR=40833333.333333336
 RCC.VcooutputI2S=160000000
 RCC.VcooutputI2SQ=160000000
+SH.FMC_A16_CLE.0=FMC_CLE,8b-dmux2
+SH.FMC_A16_CLE.ConfNb=1
+SH.FMC_A17_ALE.0=FMC_ALE,8b-dmux2
+SH.FMC_A17_ALE.ConfNb=1
+SH.FMC_D0_DA0.0=FMC_D0,8b-dmux2
+SH.FMC_D0_DA0.ConfNb=1
+SH.FMC_D1_DA1.0=FMC_D1,8b-dmux2
+SH.FMC_D1_DA1.ConfNb=1
+SH.FMC_D2_DA2.0=FMC_D2,8b-dmux2
+SH.FMC_D2_DA2.ConfNb=1
+SH.FMC_D3_DA3.0=FMC_D3,8b-dmux2
+SH.FMC_D3_DA3.ConfNb=1
+SH.FMC_D4_DA4.0=FMC_D4,8b-dmux2
+SH.FMC_D4_DA4.ConfNb=1
+SH.FMC_D5_DA5.0=FMC_D5,8b-dmux2
+SH.FMC_D5_DA5.ConfNb=1
+SH.FMC_D6_DA6.0=FMC_D6,8b-dmux2
+SH.FMC_D6_DA6.ConfNb=1
+SH.FMC_D7_DA7.0=FMC_D7,8b-dmux2
+SH.FMC_D7_DA7.ConfNb=1
+SH.FMC_NOE.0=FMC_NOE,8b-dmux2
+SH.FMC_NOE.ConfNb=1
+SH.FMC_NWE.0=FMC_NWE,8b-dmux2
+SH.FMC_NWE.ConfNb=1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
