--- a/34_FATFS/34_FATFS.ioc
+++ b/34_FATFS/34_FATFS.ioc
@@ -1,5 +1,8 @@
 #MicroXplorer Configuration settings - do not modify
 FATFS.BSP.number=1
+FATFS.IPParameters=_CODE_PAGE,_USE_LFN
+FATFS._CODE_PAGE=936
+FATFS._USE_LFN=2
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
 FATFS0.BSP.component=
@@ -13,6 +16,7 @@ FATFS0.BSP.name=Detect_SDIO
 FATFS0.BSP.semaphore=
 FATFS0.BSP.solution=PA5
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=FATFS
@@ -56,6 +60,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SDIO_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -73,20 +78,32 @@ PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PC10.GPIOParameters=GPIO_PuPd
+PC10.GPIO_PuPd=GPIO_PULLUP
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDIO_D2
+PC11.GPIOParameters=GPIO_PuPd
+PC11.GPIO_PuPd=GPIO_PULLUP
 PC11.Mode=SD_4_bits_Wide_bus
 PC11.Signal=SDIO_D3
+PC12.GPIOParameters=GPIO_PuPd
+PC12.GPIO_PuPd=GPIO_PULLUP
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.Signal=SDIO_CK
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PC8.GPIOParameters=GPIO_PuPd
+PC8.GPIO_PuPd=GPIO_PULLUP
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
+PC9.GPIOParameters=GPIO_PuPd
+PC9.GPIO_PuPd=GPIO_PULLUP
 PC9.Mode=SD_4_bits_Wide_bus
 PC9.Signal=SDIO_D1
+PD2.GPIOParameters=GPIO_PuPd
+PD2.GPIO_PuPd=GPIO_PULLUP
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDIO_CMD
 PH0/OSC_IN.Mode=HSE-External-Oscillator
@@ -106,7 +123,7 @@ ProjectManager.DeviceId=STM32F429IGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x2000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -116,11 +133,11 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=34_FATFS.ioc
 ProjectManager.ProjectName=34_FATFS
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SDIO_SD_Init-SDIO-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false
 RCC.48MHZClocksFreq_Value=45000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -161,6 +178,8 @@ RCC.VCOSAIOutputFreq_ValueQ=20416666.666666668
 RCC.VCOSAIOutputFreq_ValueR=40833333.333333336
 RCC.VcooutputI2S=160000000
 RCC.VcooutputI2SQ=160000000
+SDIO.ClockDiv=4
+SDIO.IPParameters=ClockDiv
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FATFS_VS_SDIO.Mode=SDIO
