--- a/33_NAND_FLASH_MT29F4G08/33_NAND_FLASH_MT29F4G08.ioc
+++ b/33_NAND_FLASH_MT29F4G08/33_NAND_FLASH_MT29F4G08.ioc
@@ -9,11 +9,11 @@ FMC.CommonSpaceSetupTime2=1
 FMC.CommonSpaceWaitSetupTime2=3
 FMC.ECCPageSize2=FMC_NAND_ECC_PAGE_SIZE_2048BYTE
 FMC.IPParameters=ECCPageSize2,CommonSpaceSetupTime2,CommonSpaceWaitSetupTime2,CommonSpaceHoldSetupTime2,CommonSpaceHiZSetupTime2,AttributeSpaceSetupTime2,AttributeSpaceWaitSetupTime2,AttributeSpaceHoldSetupTime2,AttributeSpaceHiZSetupTime2,NandPageSize2,NandSpareAreaSize2,NandBlockSize2,NandBlockNbr2,NandPlaneNbr2,NandPlaneSize2
-FMC.NandBlockNbr2=2048
+FMC.NandBlockNbr2=4096
 FMC.NandBlockSize2=64
 FMC.NandPageSize2=2048
 FMC.NandPlaneNbr2=2
-FMC.NandPlaneSize2=4096
+FMC.NandPlaneSize2=2048
 FMC.NandSpareAreaSize2=64
 File.Version=6
 KeepUserPlacement=false
@@ -53,8 +53,8 @@ Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
-MxCube.Version=5.3.0
-MxDb.Version=DB.5.0.30
+MxCube.Version=5.6.0
+MxDb.Version=DB.5.0.60
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -101,7 +101,7 @@ PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -110,10 +110,10 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F429IGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.24.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x2000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -123,11 +123,11 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=33_NAND_FLASH_MT29F4G08.ioc
 ProjectManager.ProjectName=33_NAND_FLASH_MT29F4G08
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
