--- a/35_FreeRTOS_01_Start/35_FreeRTOS_01_Start.ioc
+++ b/35_FreeRTOS_01_Start/35_FreeRTOS_01_Start.ioc
@@ -1,7 +1,8 @@
 #MicroXplorer Configuration settings - do not modify
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.IPParameters=Tasks01,FootprintOK,configMAX_PRIORITIES
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LED0,0,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;LED1,-3,128,StartTask03,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configMAX_PRIORITIES=32
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
