--- a/35_FreeRTOS_01_Start/35_FreeRTOS_01_Start.ioc
+++ b/35_FreeRTOS_01_Start/35_FreeRTOS_01_Start.ioc
@@ -1,7 +1,8 @@
 #MicroXplorer Configuration settings - do not modify
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configMAX_PRIORITIES
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LED0,0,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;LED1,-3,128,StartTask03,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,configMAX_PRIORITIES,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LED0,0,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;LED1,-3,128,StartTask03,Default,NULL,Dynamic,NULL,NULL;Start_task,-3,256,StartTask_03,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configMAX_PRIORITIES=32
 File.Version=6
 KeepUserPlacement=false
@@ -10,8 +11,10 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP4=TIM3
+Mcu.IP5=TIM5
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F429I(E-G)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PC14/OSC32_IN
@@ -19,6 +22,8 @@ Mcu.Pin1=PC15/OSC32_OUT
 Mcu.Pin10=PB3
 Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin12=VP_SYS_VS_tim1
+Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin3=PH1/OSC_OUT
 Mcu.Pin4=PB0
@@ -27,7 +32,7 @@ Mcu.Pin6=PA9
 Mcu.Pin7=PA10
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=13
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429IGTx
@@ -44,6 +49,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -98,7 +104,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -138,11 +144,22 @@ RCC.VCOSAIOutputFreq_ValueQ=20416666.666666668
 RCC.VCOSAIOutputFreq_ValueR=40833333.333333336
 RCC.VcooutputI2S=160000000
 RCC.VcooutputI2SQ=160000000
+TIM3.IPParameters=Prescaler,Period,TIM_MasterSlaveMode
+TIM3.Period=10000-1
+TIM3.Prescaler=9000-1
+TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
+TIM5.IPParameters=Prescaler,Period
+TIM5.Period=10000-1
+TIM5.Prescaler=9000-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
 isbadioc=false
