--- a/35_FreeRTOS_01_Start/35_FreeRTOS_01_Start.ioc
+++ b/35_FreeRTOS_01_Start/35_FreeRTOS_01_Start.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configMAX_PRIORITIES,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;LED0,0,128,StartTask02,Default,NULL,Dynamic,NULL,NULL;LED1,-3,128,StartTask03,Default,NULL,Dynamic,NULL,NULL;Start_task,-3,256,StartTask_03,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=Name_Start_Task,0,128,Start_Task,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configMAX_PRIORITIES=32
 File.Version=6
@@ -50,6 +50,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -104,7 +105,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
